--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dev_dependencies:
   injectable_generator: ^1.4.1
   auto_route_generator: ^2.1.0
 
+  #linting
+  flutter_lints: ^1.0.4
+
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
