--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,64 +8,64 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   # For date formatting
-  intl: ^0.17.0
+  intl: ^0.18.1
 
   #to open site
-  url_launcher: ^6.0.10
+  url_launcher: ^6.1.14
 
   # Firebase
-  firebase_core: ^1.6.0
-  firebase_auth: ^3.1.0
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.9.0
 
   # Google Sign In
-  google_sign_in: ^5.1.0
+  google_sign_in: ^6.1.5
 
   # Facebook Sign In
-  flutter_facebook_auth: ^3.5.1
+  flutter_facebook_auth: ^6.0.1
 
   # Auth buttons
-  social_auth_buttons: ^2.0.0-nullsafety.1
+  auth_buttons: ^3.0.2
 
   # Bloc
-  flutter_bloc: ^7.0.1
+  flutter_bloc: ^8.1.3
 
   # Dependency Injection
-  get_it: ^7.2.0
-  injectable: ^1.4.1
+  get_it: ^7.6.4
+  injectable: ^2.3.0
 
   # Code Generators
-  freezed_annotation: ^0.14.1
+  freezed_annotation: ^2.4.1
 
   # Architecture
-  dartz: ^0.10.0-nullsafety.2
-  kt_dart: ^0.9.1
+  dartz: ^0.10.1
+  kt_dart: ^1.1.0
 
   #Routing
-  auto_route: ^2.2.0
+  auto_route: ^7.8.3
 
   #mdas calculations
-  math_expressions: ^2.2.0
+  math_expressions: ^2.4.0
 
   # REST API
-  dio: ^4.0.0
-  retrofit: ^2.0.1
+  dio: ^5.3.2
+  retrofit: ^4.0.1
 
   # Maps
-  location: ^4.3.0
-  geocoding: ^2.0.0
-  geolocator: ^7.0.3
-  google_maps_flutter: ^2.0.6
-  flutter_polyline_points: ^1.0.0
+  location: ^5.0.0
+  geocoding: ^2.1.0
+  geolocator: ^10.0.1
+  google_maps_flutter: ^2.5.0
+  flutter_polyline_points: ^2.0.0
 
   # Local DB
-  hive: ^2.0.4
+  hive: ^2.2.3
   hive_flutter: ^1.1.0
 
 dev_dependencies:
@@ -73,16 +73,16 @@ dev_dependencies:
     sdk: flutter
 
   #Code Generation
-  freezed: ^0.14.1
-  build_runner: ^2.1.2
-  hive_generator: ^1.1.0
-  json_serializable: ^4.1.4
-  retrofit_generator: ^2.0.1
-  injectable_generator: ^1.4.1
-  auto_route_generator: ^2.1.0
+  freezed: ^2.4.2
+  build_runner: ^2.4.6
+  hive_generator: ^2.0.1
+  json_serializable: ^6.7.1
+  retrofit_generator: ^7.0.8
+  injectable_generator: ^2.4.0
+  auto_route_generator: ^7.3.1
 
   #linting
-  flutter_lints: ^1.0.4
+  flutter_lints: ^2.0.3
 
 # The following section is specific to Flutter.
 flutter:
